derive/tests/snapshots/disallow_soft_delete_and_cascade/Guest/get_all_guests.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `guest` table.
    pub fn get_all_guests<'a>(&'a self) -> impl Iterator<Item = Guest> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().guest().iter()
    }
}
