derive/tests/snapshots/disallow_soft_delete_and_cascade/Guest/get_guests_by_guild_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Guest` iterator that contains all rows in the `guest` table whose value matches the value from the single-column btree index on the `guild_id` column.
    pub fn get_guests_by_guild_id<'a>(
        &'a self,
        guild_id: impl Into<GuildId>,
    ) -> impl Iterator<Item = Guest> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().guest().guild_id().filter(guild_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Guest` iterator that contains all rows in the `guest` table whose value matches the value from the single-column btree index on the `guild_id` column.
    pub fn get_guests_by_guild_id<'a>(
        &'a self,
        guild_id: impl Into<GuildId>,
    ) -> impl Iterator<Item = Guest> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().guest().guild_id().filter(guild_id.into().value())
    }
}
