derive/tests/snapshots/disallow_soft_delete_and_cascade/Guest/internal_methods.snap
---
source: derive/src/characterization_tests.rs
---
// execute_on_delete_strategies_of_the_guest_table_after_one_row_of_the_guild_table_was_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `guest` after one row of the referenced table `guild` was deleted.
    pub fn execute_on_delete_strategies_of_the_guest_table_after_one_row_of_the_guild_table_was_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &u64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {
                    for mut row in dsl
                        .db()
                        .guest()
                        .guild_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        let old_row = row.clone();
                        row.guild_id = 0;
                        let child_entries = vec![];
                        let id = &row.id;
                        entries
                            .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                table_name: "guest".into(),
                                column_name: "guild_id".into(),
                                strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SetZero,
                                row_value: format!("{}", GuestId::new(id.clone())).into(),
                                child_entries: child_entries,
                            });
                        if row.remaining_visits > old_row.remaining_visits {
                            error = true;
                            error_from_hook = Some(
                                Box::new(
                                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                                        format!(
                                            "Disallowed Value Error while trying to update the row `{}` in the `guest` table because `remaining_visits` would increase from `{}` to `{}`, which `#[disallow(increasing)]` forbids!",
                                            format!("{{ id : {} }}", row.id), old_row.remaining_visits,
                                            row.remaining_visits
                                        ),
                                    ),
                                ),
                            );
                            break 'outer;
                        }
                        dsl.db().guest().id().update(row);
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}

// execute_on_delete_strategies_of_the_guest_table_after_one_row_of_the_guild_table_was_soft_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `guest` after one row of the referenced table `guild` was soft-deleted.
    pub fn execute_on_delete_strategies_of_the_guest_table_after_one_row_of_the_guild_table_was_soft_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_value_of_a_row_of_another_table_to_delete: &u64,
    ) -> Result<
        Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = vec![];
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {
                    for mut row in dsl
                        .db()
                        .guest()
                        .guild_id()
                        .filter(primary_key_value_of_a_row_of_another_table_to_delete)
                    {
                        if !(row.deleted) {
                            let old_row = row.clone();
                            if row.remaining_visits > old_row.remaining_visits {
                                error = true;
                                error_from_hook = Some(
                                    Box::new(
                                        crate::spacetimedsl::error::SpacetimeDSLError::Error(
                                            format!(
                                                "Disallowed Value Error while trying to soft delete the row `{}` in the `guest` table because `remaining_visits` would increase from `{}` to `{}`, which `#[disallow(increasing)]` forbids!",
                                                format!("{{ id : {} }}", row.id), old_row.remaining_visits,
                                                row.remaining_visits
                                            ),
                                        ),
                                    ),
                                );
                                break 'outer;
                            }
                            row.deleted = true;
                            let child_entries = vec![];
                            let id = &row.id;
                            entries
                                .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                    table_name: "guest".into(),
                                    column_name: "guild_id".into(),
                                    strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
                                    row_value: format!("{}", GuestId::new(id.clone())).into(),
                                    child_entries: child_entries,
                                });
                            dsl.db().guest().id().update(row);
                        }
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}

// execute_on_delete_strategies_of_the_guest_table_after_multiple_rows_of_the_guild_table_were_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `guest` after multiple rows of the referenced table `guild` were deleted.
    pub fn execute_on_delete_strategies_of_the_guest_table_after_multiple_rows_of_the_guild_table_were_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_values_of_rows_of_another_table_to_delete: &'a [u64],
    ) -> Result<
        std::collections::HashMap<
            &'a u64,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            std::collections::HashMap<
                &'a u64,
                Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
            >,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = std::collections::HashMap::new();
        for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
            entries
                .insert(primary_key_value_of_a_row_of_another_table_to_delete, vec![]);
        }
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {
                    for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
                        for mut row in dsl
                            .db()
                            .guest()
                            .guild_id()
                            .filter(
                                primary_key_value_of_a_row_of_another_table_to_delete,
                            )
                        {
                            let old_row = row.clone();
                            row.guild_id = 0;
                            let child_entries = vec![];
                            let id = &row.id;
                            entries
                                .get_mut(
                                    primary_key_value_of_a_row_of_another_table_to_delete,
                                )
                                .unwrap_or_else(|| {
                                    panic!(
                                        "every primary key value of a removed row of the referenced table was given an entry list before its strategies ran, which does not hold for {}",
                                        primary_key_value_of_a_row_of_another_table_to_delete
                                    )
                                })
                                .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                    table_name: "guest".into(),
                                    column_name: "guild_id".into(),
                                    strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SetZero,
                                    row_value: format!("{}", GuestId::new(id.clone())).into(),
                                    child_entries: child_entries,
                                });
                            if row.remaining_visits > old_row.remaining_visits {
                                error = true;
                                error_from_hook = Some(
                                    Box::new(
                                        crate::spacetimedsl::error::SpacetimeDSLError::Error(
                                            format!(
                                                "Disallowed Value Error while trying to update the row `{}` in the `guest` table because `remaining_visits` would increase from `{}` to `{}`, which `#[disallow(increasing)]` forbids!",
                                                format!("{{ id : {} }}", row.id), old_row.remaining_visits,
                                                row.remaining_visits
                                            ),
                                        ),
                                    ),
                                );
                                break 'outer;
                            }
                            dsl.db().guest().id().update(row);
                        }
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}

// execute_on_delete_strategies_of_the_guest_table_after_multiple_rows_of_the_guild_table_were_soft_deleted
impl crate::spacetimedsl::internal::DSLInternals {
    ///Execute On Delete Strategies of the referencing table `guest` after multiple rows of the referenced table `guild` were soft-deleted.
    pub fn execute_on_delete_strategies_of_the_guest_table_after_multiple_rows_of_the_guild_table_were_soft_deleted<
        'a,
        T: crate::spacetimedsl::WriteContext,
    >(
        dsl: &crate::spacetimedsl::DSL<'_, T>,
        strategy: &crate::spacetimedsl::delete::OnDeleteStrategy,
        primary_key_values_of_rows_of_another_table_to_delete: &'a [u64],
    ) -> Result<
        std::collections::HashMap<
            &'a u64,
            Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
        >,
        crate::spacetimedsl::delete::OnDeleteStrategyFailure<
            std::collections::HashMap<
                &'a u64,
                Vec<crate::spacetimedsl::delete::DeletionResultEntry>,
            >,
        >,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let mut entries = std::collections::HashMap::new();
        for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
            entries
                .insert(primary_key_value_of_a_row_of_another_table_to_delete, vec![]);
        }
        let mut error_from_hook: Option<
            Box<crate::spacetimedsl::error::SpacetimeDSLError>,
        > = None;
        let mut error = false;
        'outer: {
            match &strategy {
                crate::spacetimedsl::delete::OnDeleteStrategy::Error => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Delete => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete => {
                    for primary_key_value_of_a_row_of_another_table_to_delete in primary_key_values_of_rows_of_another_table_to_delete {
                        for mut row in dsl
                            .db()
                            .guest()
                            .guild_id()
                            .filter(
                                primary_key_value_of_a_row_of_another_table_to_delete,
                            )
                        {
                            if !(row.deleted) {
                                let old_row = row.clone();
                                if row.remaining_visits > old_row.remaining_visits {
                                    error = true;
                                    error_from_hook = Some(
                                        Box::new(
                                            crate::spacetimedsl::error::SpacetimeDSLError::Error(
                                                format!(
                                                    "Disallowed Value Error while trying to soft delete the row `{}` in the `guest` table because `remaining_visits` would increase from `{}` to `{}`, which `#[disallow(increasing)]` forbids!",
                                                    format!("{{ id : {} }}", row.id), old_row.remaining_visits,
                                                    row.remaining_visits
                                                ),
                                            ),
                                        ),
                                    );
                                    break 'outer;
                                }
                                row.deleted = true;
                                let child_entries = vec![];
                                let id = &row.id;
                                entries
                                    .get_mut(
                                        primary_key_value_of_a_row_of_another_table_to_delete,
                                    )
                                    .unwrap_or_else(|| {
                                        panic!(
                                            "every primary key value of a removed row of the referenced table was given an entry list before its strategies ran, which does not hold for {}",
                                            primary_key_value_of_a_row_of_another_table_to_delete
                                        )
                                    })
                                    .push(crate::spacetimedsl::delete::DeletionResultEntry {
                                        table_name: "guest".into(),
                                        column_name: "guild_id".into(),
                                        strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
                                        row_value: format!("{}", GuestId::new(id.clone())).into(),
                                        child_entries: child_entries,
                                    });
                                dsl.db().guest().id().update(row);
                            }
                        }
                    }
                }
                crate::spacetimedsl::delete::OnDeleteStrategy::SetZero => {}
                crate::spacetimedsl::delete::OnDeleteStrategy::Ignore => {}
            };
        }
        match error {
            false => Ok(entries),
            true => {
                Err(crate::spacetimedsl::delete::OnDeleteStrategyFailure {
                    entries: entries,
                    error_from_hook: error_from_hook,
                })
            }
        }
    }
}
