derive/tests/snapshots/disallow_soft_delete_and_cascade/Guest/soft_delete_guest_by_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to soft-delete a `Guest` row in the `guest` table whose value matches the value from the unique single-column btree index on the `id` column.

# Disallowed values

Fails with a *Disallowed Value Error* if a column holds what its `#[disallow]` forbids:

- `remaining_visits`: an increase*/
    pub fn soft_delete_guest_by_id<'a>(
        &'a self,
        id: impl Into<GuestId> + Clone,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let id = id.clone().into().value();
        let row_to_delete = self.db().guest().id().find(id);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "guest".into(),
                    column_names_and_row_values: format!("{{ id : {} }}", & id).into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        if row_to_delete.deleted {
            return Ok(crate::spacetimedsl::delete::DeletionResult {
                table_name: "guest".into(),
                one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
                entries: vec![],
                error_from_hook: None,
            });
        }
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "guest".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::SoftDelete,
            row_value: format!("{}", GuestId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        let old_row = &row_to_delete;
        let mut new_row = old_row.clone();
        if new_row.remaining_visits > old_row.remaining_visits {
            return Err(
                crate::spacetimedsl::error::SpacetimeDSLError::Error(
                    format!(
                        "Disallowed Value Error while trying to soft delete the row `{}` in the `guest` table because `remaining_visits` would increase from `{}` to `{}`, which `#[disallow(increasing)]` forbids!",
                        format!("{{ id : {} }}", new_row.id), old_row.remaining_visits,
                        new_row.remaining_visits
                    ),
                ),
            );
        }
        new_row.deleted = true;
        self.db().guest().id().update(new_row);
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "guest".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
